# axum_test

./: .env  Cargo.toml
migration/: Cargo.toml
migration/src/: entities.rs  lib.rs  main.rs
migration/src/m20231018/: entities.rs  m000001_create_user.rs  m000002_create_token.rs  m000003_create_role.rs  m000004_create_user_role.rs  m000005_create_msg.rs  mod.rs
migration/src/m20231209/: m000006_create_ath20.rs  m000007_create_statistics.rs  mod.rs
src/: main.rs  mqtt.rs  routes.rs
src/entity/: login_token.rs  mod.rs  mqtt_aht20.rs  mqtt_aht20_statistics.rs  mqtt_ath20.rs  mqtt_ath20_statistics.rs  mqtt_message.rs  prelude.rs  role.rs  user.rs  user_role.rs
