[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = "0.4.31"
dotenv = "0.15.0"
paho-mqtt = "0.12.3"
sea-orm = { version = "0.12.3", features = ["runtime-tokio-rustls","sqlx-postgres","macros"] }
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "^1.33.0", features = ["full"] }
tower = "0.4.13"
tower-cookies = "0.9.0"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing-subscriber = "0.3.17"

[profile.release]
strip = true 
lto = true 